# OccPy

./: .gitignore  404.html  BOVwriter.py  Echo.cpp  Echo.hpp  MANIFEST.in  MLS_notebook.ipynb  Pulse.cpp  Pulse.hpp  README.md  Raytracer.cpp  Raytracer.hpp  Run_OccPy_BEFLaegern.py  TLS_notebook.ipynb  Test_MLS.py  Test_Package.py  Test_Package_MLS.py  Test_Package_TLS.py  Test_Package_UAVLS.py  Test_TLS.py  Test_UAVLS.py  UAVLS_notebook.ipynb  environment.yml  environment_20241202.yml  index.html  mkdocs.yml  objects.inv  prepare_trajectory.py  pyproject.toml  raytr.pyx  ref_occpy.html  ref_occpy_riegl.html  ref_occpy_riegl_io.html  ref_terrain_model.html  ref_util.html  ref_visualization.html  requirements.txt  requirements_20241212.txt  settings_MLS.JSON  settings_TLS.JSON  (+5 more)
.github/: main.yml
admin/: Docs_status.md  Meeting Heidelberg group - 2024-04-19.md  Tasks.md  Tasks_October2025.md  release.md  xy_flip_status.md
config/: OXA.JSON  requirements_20240223.txt  requirements_20241212_noversions.txt  settings_MLS.JSON  settings_MLS_tutorial.JSON  settings_MLS_tutorial_adapt.JSON  settings_TLS.JSON  settings_TLS_tutorial.JSON  settings_TLS_tutorial_out_indivLAZ.JSON  settings_ULS.JSON  settings_ULS_tutorial.JSON
data/: DSM_FP05_swissSurface3D_10cm.tif  DSM_FP05_swissSurface3D_10cm_clipped.tif  DTM_FP05_swissAlti3D_10cm.tif  DTM_FP05_swissAlti3D_10cm_clipped.tif  DTM_FP05_swissAlti3D_10cm_resc_1.tif  DTM_FP05_swissAlti3D_10cm_resc_1_resc_1.tif
docs/: index.md  mkdocs.yml  ref_occpy.md  ref_occpy_riegl.md  ref_occpy_riegl_io.md  ref_terrain_model.md  ref_util.md  ref_visualization.md  reference.md
mkdocs/: mkdocs.yml
notebooks/: MLS_notebook.html  MLS_notebook.ipynb  TLS_notebook.html  TLS_notebook.ipynb  TLS_notebook_individualLAZ.html  TLS_notebook_individualLAZ.ipynb  ULS_notebook.html  ULS_notebook.ipynb  pyvista.html  pyvista.ipynb  pyvista_interactive.html  pyvista_interactive.ipynb  test_lexcube.ipynb  test_riegl_io.ipynb
occpy/: BOVwriter.py  OccPy.py  (+10 more)
(+85 files in other folders)
